crates/rome_js_formatter/tests/specs/prettier/js/bind-expressions/short_name_method.js.snap
---
source: crates/rome_js_formatter/tests/prettier_tests.rs
info:
  test_file: "js\\bind-expressions\\short_name_method.js"
---

# Input

```js
class X {
  constructor() {
    this.shortMethod = ::this.shortMethod;
  }
  
  shortMethod() {
    return true;
  }
}```


# Prettier differences

```diff
--- Prettier
+++ Rome
@@ -1,6 +1,7 @@
 class X {
   constructor() {
-    this.shortMethod = ::this.shortMethod;
+    this.shortMethod =
+    ::this.shortMethod
   }
 
   shortMethod() {
```

# Output

```js
class X {
  constructor() {
    this.shortMethod =
    ::this.shortMethod
  }

  shortMethod() {
    return true;
  }
}
```


# Errors
```
short_name_method.js:3:24 SyntaxError ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × expected an expression, or an assignment but instead found ':'
  
  × Expected an expression, or an assignment here
  
    ┌─ short_name_method.js:3:24
    │
  3 │     this.shortMethod = ::this.shortMethod;
    │                        ^
  

```


